// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test should match snapshot 1`] = `
<div
  id="reactgooglegraph-1"
  style={
    Object {
      "height": "300px",
      "width": "400px",
    }
  }
>
  <div>
    Rendering Chart
  </div>
</div>
`;

exports[`Snapshot test should match snapshot 2`] = `
<div
  id="ScatterChart"
  style={
    Object {
      "height": "400px",
      "width": "100%",
    }
  }
>
  <div>
    Rendering Chart
  </div>
</div>
`;
